--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -1,5 +1,7 @@
 <link rel="stylesheet" href="https://ssl.gstatic.com/docs/script/css/add-ons.css">
 <script src='https://code.jquery.com/jquery-2.1.3.min.js'></script>
+<script src='https://cdnjs.cloudflare.com/ajax/libs/mustache.js/0.8.1/mustache.min.js'>
+</script>
 <style>
 .collapse{
   font-size: 20px;
@@ -20,7 +22,7 @@
     <input type='button' value='Refresh' onclick="google.script.run.showSidebar()" />
 </div>
 
-<div>
+<div id='task_queue' style='display:none'>
 {{#task_queues}}
 <div>
     <label class='collapse' style='color: {{color}}' for='_{{index}}'>{{type}}</label>
@@ -35,3 +37,15 @@
 </div>
 {{/task_queues}}
 </div>
+
+<script>
+SB = {};
+SB.buildTaskQueue = function (result) {
+    var taskQueue = document.getElementById('task_queue');
+    var content = JSON.parse(result);
+    taskQueue.innerHTML = Mustache.to_html(taskQueue.innerHTML, content);
+    taskQueue.style.display = 'block';
+};
+
+google.script.run.withSuccessHandler(SB.buildTaskQueue).getTasksString();
+</script>
