--- a/templates/insert_task_diag.html
+++ b/templates/insert_task_diag.html
@@ -2,8 +2,10 @@
 <h1>Task description</h1>
 <textarea rows="4" cols="50" id="task_desc" placeholder="Please enter a short task description here: e.g., write a report of google apps for jack">
 </textarea>
+<div>
 <button class="action" id="insert">Insert</button>
 <button  value="Close" onclick="google.script.host.close()">Close</button>
+</div>
 <script>
 document.getElementById('insert').onclick= function(){
   var taskDesc = document.getElementById('task_desc').value;
